# what2eat1

./: pyproject.toml
src/: lifespan.py  main.py
src/auth/: config.py  router.py  schemas.py  user_manager.py
src/core/: base_model.py  config.py
src/dishes/: model.py  repository.py  router.py  service.py
src/weather/: cache_weather.py  dependencies.py  router.py  schemas.py  service.py
